<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.haw_hamburg.bachelorprojekt_rc.rccar.ControlSliderActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="73dp">

    <SeekBar
        android:id="@+id/seekBarSteering"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="72dp"
        android:focusableInTouchMode="false"
        android:hapticFeedbackEnabled="false"
        android:max="255"
        android:progress="127"
        android:progressTint="@android:color/transparent"
        android:thumb="@mipmap/seekbar_steering"
        android:thumbOffset="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <SeekBar
        android:id="@+id/seekBarDrive"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="255"
        android:progress="127"
        android:progressTint="@android:color/transparent"
        android:rotation="270"
        android:thumb="@mipmap/seekbar_accelerator"
        android:thumbOffset="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewBackward"
        app:layout_constraintStart_toStartOf="@+id/textViewBackward"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/forward"
        app:layout_constraintEnd_toEndOf="@+id/textViewBackward"
        app:layout_constraintStart_toStartOf="@+id/textViewBackward"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewBackward"
        android:layout_width="63dp"
        android:layout_height="17dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/backward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textViewLeftSteering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/left"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarSteering"
        app:layout_constraintEnd_toStartOf="@+id/seekBarSteering"
        app:layout_constraintTop_toTopOf="@+id/seekBarSteering"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textViewRightSteering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/right"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarSteering"
        app:layout_constraintStart_toEndOf="@+id/seekBarSteering"
        app:layout_constraintTop_toTopOf="@+id/seekBarSteering"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textViewCurrentSterring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/initValue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewRightSteering"
        app:layout_constraintStart_toStartOf="@+id/seekBarSteering"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textViewCurrentDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/initValue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/seekBarDrive"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/textViewSendSlider"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="80dp"
        android:text="@string/initInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonHornSlider"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/horn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButtonLightSlider"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:textOff="@string/lightOff"
        android:textOn="@string/lightOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHornSlider" />

    <CheckBox
        android:id="@+id/checkBoxLimitationSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/limitation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonLightSlider" />


</android.support.constraint.ConstraintLayout>
